--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   </head>
 
   <body class="bg-gray-50">
+    <%= render 'application/header' %>
     <div class="bg-white mx-8 px-8 rounded">
       <%= yield %>
     </div>
