--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -7,6 +7,7 @@
       <% active_class = 'bg-gray-100 rounded' %>
       <%
         [
+          ['Dashboard', dashboard_index_path],
           ['Entries', entries_path],
           ['Logs', logs_path]
         ].each do |name, path|
