--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,11 +9,13 @@
     <%= stylesheet_link_tag "inter-font" %>
     <%= stylesheet_link_tag "tailwind" %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
+
+    <%= content_for :head %>
   </head>
 
   <body class="bg-gray-50">
     <%= render 'application/header' %>
-    <div class="bg-white mx-8 px-8 rounded">
+    <div class="bg-white mx-8 px-8 rounded pb-4 shadow-sm">
       <%= yield %>
     </div>
   </body>
