--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="font-serif text-4xl pb-4 pt-4">Entries</h1>
+<%= content_for(:title) { 'Entries' } %>
 
 <table class="table-auto w-full">
   <% row_class = "border-b-2" %>
