--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 
   <body class="bg-gray-50">
     <%= render 'application/header' %>
-    <div class="bg-white mx-8 px-8 rounded pb-4 shadow-sm">
+    <div class="bg-white mx-8 rounded p-8 shadow-sm">
       <%= yield %>
     </div>
   </body>
