--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -6,7 +6,6 @@
   <% heading_cell_class = "bg-gray-800 text-white text-left" %>
   <thead>
     <tr class="<%= row_class %>">
-      <th class="<%= heading_cell_class %>">ID</th>
       <th class="<%= heading_cell_class %>">Timestamp</th>
       <th class="<%= heading_cell_class %>">User Agent</th>
       <th class="<%= heading_cell_class %>">Country Code</th>
@@ -17,24 +16,18 @@
   </thead>
   <tbody>
     <% @entries.each do |entry| %>
-      <tr class="<%= row_class %>">
-        <td class="<%= cell_class %>"><%= entry.id %></td>
+      <tr class="<%= row_class %>" data-entry-id="<%= entry.id %>">
         <td class="<%= cell_class %>"><%= l entry.timestamp %></td>
         <td class="<%= cell_class %>" title="<%= entry.user_agent %>">
-          <% if entry.rss_reader? %>
-            <span class="bg-blue-500 px-2 rounded text-white">RSS Reader</span>
-          <% else %>
-            <span class="px-2 rounded"><%= entry.browser.name %></span>
-          <% end %>
+          <%= entry.browser.name %>
         </td>
         <td class="<%= cell_class %>"><%= entry.country_code %></td>
         <td class="<%= cell_class %>"><%= entry.path %></td>
         <td class="<%= cell_class %>"><%= entry.format %></td>
-        <td><%= link_to 'Show', entry, class: "cursor-pointer text-blue-600 hover:underline" %></td>
+        <td><%= link_to 'More', entry, class: "cursor-pointer text-blue-600 hover:underline" %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <%== render partial: 'pagy/nav', locals: {pagy: @pagy} %>
-
