Updated Logs#index view
Updated header to display the link to the Logs#index.
Updated dependencies and tailwindcss-rails.
Removed sass-rails.
Added a pre-commit git hook.

--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -8,7 +8,8 @@
       <%
         [
           ['Dashboard', dashboard_index_path],
-          ['Entries', entries_path]
+          ['Entries', entries_path],
+          ['Logs', logs_path]
         ].each do |name, path|
       %>
         <% active = request.path == path || (request.path == root_path && name == 'Dashboard') %>
